# polycall

./: .config_reclassified  .gitattributes  .gitignore  .polycall-docz.txt  03-reset-cache.sh  06-orphan-finder.sh  CMakeLists.txt  CMakeLists.txt.old  ISOLATION_LOG.md  Makefile  Makefile.backup  Makefile.build  Makefile.make  Makefile.projects  Makefile.purity  Makefile.spec  Makefile.topo  Makefile.topo2old  Makefile.vendor  README.md  README_dev_cycle_structure.txt  SINPHASE_TELEMETRY.json  SINPHASE_VIOLATIONS.json  SINPHASE_VIOLATIONS_ENHANCED.json  build-errors-dev-main.txt  build-plantuml.sh  build.sh  claude-observer.sh  clean_package_architect.py  cleanup.sh  corrected_sinphase_generator.py  crontab  diagnose-makefile.sh  dir-of-polycall-status.txt  dir.txt  ffi_type_conflicts_resolved.txt  fix_module_classifcation.py  fix_summary.txt  fix_violations_report.json  fixed_setup_orchestrator.py  (+37 more)
examples/: CMakeLists.txt
libpolycall/: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  SINPHASE_REFACTOR_LOG.md  config.Polycallfile  config.Polycallfile.ignore  error.txt  libpolycall.dir  libpolycall.txt  polycall_dir.txt  pyproject.toml  refactor_binding.sh  requirements-dev.txt  setup.py
libpolycall/.github/workflows/: sinphase-governance.yml
libpolycall/__bindings__/pypolycall/: README.md  pypolycall.polycall.ignore  pypolycall.polycallrc  pyproject.toml  setup.py
libpolycall/__config__/: polycall.polycallfile
libpolycall/__schema__/: dop_adapter_config.json  golang_bridge_config.json  java_bridge_config.json  node_bridge_config.json  python_bridge_config.json
libpolycall/__tests__/: CMakeLists.txt  Makefile
libpolycall/cmake/: Utils.cmake.bak
libpolycall/components/edge/: CMakeLists.txt
libpolycall/components/micro/: CMakeLists.txt
libpolycall/components/topo/: CMakeLists.txt
libpolycall/config/project/: pyproject.toml
libpolycall/demo/: standardize_includes.py
libpolycall/docs/: TODO.md  commands.md  integration_guide.md
libpolycall/docs/accessibiilty/: biafran_uiux.md
libpolycall/docs/auth/: AUTH.md
libpolycall/docs/cli/: cli_enhancement(todo).md  commands.md
libpolycall/docs/config/: POLYCALL_CONFIG.md  config_structure.md  testing_strats.md
libpolycall/docs/contr/: CONTRIBUTION.md  WORKFLOW.md
libpolycall/docs/diagrams/: ffi-interactive.tsx  ffi.md  uml_core.md  zero_trust.md  zero_trust_model_diagram.md
libpolycall/docs/ffi/: README.md  archeitcure.md  architecture.md  diagram.md  integration_guide.md  security_model.md
libpolycall/docs/guides/: ISOLATION_LOG.md  README(DOP).md  SINPHASE_GOVERNANCE_REPORT.md
libpolycall/docs/repl/: repl_command.md
libpolycall/docs/themes/: biafra-guide.md
libpolycall/docs/uml/: edge_computing.md  micro_artechture.md  telemetry_architecture.md
libpolycall/emergency-ffi-recovery/: RECOVERY_REPORT.md
libpolycall/emergency-ffi-recovery/analysis/: ffi_breakdown.md
libpolycall/emergency-ffi-recovery/original-ffi/: c_bridge.c.ISOLATED  ffi_config.c.ISOLATED  memory_bridge.c  python_bridge.c.ISOLATED  security.c
libpolycall/emergency-isolation/auth-critical/: auth_policy.c  auth_registry.c
libpolycall/emergency-isolation/ffi-critical/: CMakeLists.txt  QUARANTINE.md  c_bridge.c.ISOLATED  cobol_bridge.c  ffi_config.c.ISOLATED  ffi_core.c  ffi_registry.c  js_bridge.c  protocol_bridge.c  python_bride_dop.c  python_bridge.c.ISOLATED
libpolycall/emergency-isolation/network-critical/: CMakeLists.txt  connection_pool.c  network_config.c  network_error.c  network_packet.c  subscription.c
libpolycall/emergency-isolation/polycall-critical/: CMakeLists.txt  context.c  error.c  polycall_error.c
libpolycall/emergency-isolation/protocol-critical/: CMakeLists.txt  README.md  command_tracking.c  message.c  protocol_enhacements_config.c
libpolycall/examples/basic/: CMakeLists.txt
libpolycall/include/__tests__/: test_framework.h
libpolycall/include/polycall/: polycall.h.in  polycall_version.h.in
libpolycall/lost+found/ffi/: CMakeLists.txt  auth_commands.c  cobol_bridge.c  ffi_config.c.ISOLATED  js_bridge.c  jvm_bridge.c  memory_bridge.c  performance.c  protocol_bridge.c  security.c  type_system.c
libpolycall/minimal-viable-libpolycall/: CMakeLists.txt
libpolycall/root-dynamic-c/accessibility-isolated/: Makefile
libpolycall/root-dynamic-c/auth-isolated/: Makefile
libpolycall/root-dynamic-c/c-bridge-isolated/: CMakeLists.txt
libpolycall/root-dynamic-c/common-isolated/: Makefile
libpolycall/root-dynamic-c/config-isolated/: Makefile
libpolycall/root-dynamic-c/doctor-isolated/: Makefile
libpolycall/root-dynamic-c/dop-isolated/: Makefile
libpolycall/root-dynamic-c/edge-isolated/: Makefile
libpolycall/scripts/: governance_runner.py  libpolycall_refactor.sh
libpolycall/sinphase_governance/: __init__.py
libpolycall/sinphase_governance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
libpolycall/sinphase_toolkit/: cli.py
libpolycall/src/: CMakeLists.txt  Makefile
libpolycall/templates/: ComponentTest.cmake.in  polycall.h.in
libpolycall/tests/: CMakeLists.txt  README.md  conftest.py
libpolycall/tests_old/: CMakeLists.txt
src/cli/: CMakeLists.txt  CMakeLists.txt.bak  Makefile  command.c  command_registry_ioc.c  command_registry_ioc.h  main.c  main_ioc.c  repl.c
src/core/: CMakeLists.txt  Makefile  accessibility_colors.c  accessibility_config.c  accessibility_interface.c  ast.c  c_bridge.c  cobol_bridge.c  command.c  communication.c  compute_router.c  config_parser.c  config_schema.c  connection_pool.c  dop_adapter.c  edge.c  edge_component.c  edge_config.c  edge_runtime.c  expression_evaluator.c  fallback.c  ffi_config.c  ffi_core.c  global_config.c  hierarchical_state.c  js_bridge.c  jvm_bridge.c  language_bridge.c  macro_expander.c  memory_bridge.c  message.c  message_optimization.c  network.c  network_client.c  network_config.c  network_endpoint.c  network_event.c  network_internal.c  network_packet.c  network_server.c  (+16 more)
test/integration/: CMakeLists.txt
tests/: CMakeLists.txt  dhcp-c-polycall-qa.c
tests/config/: obinexus_qa.conf
(+2082 files in other folders)
