# Meson build options for OBINexus Polycall

option('enable_testing', type: 'boolean', value: true,
       description: 'Enable test suite compilation')

option('enable_nlink', type: 'boolean', value: true,
       description: 'Enable nlink integration')

option('security_level', type: 'string', value: 'standard',
       description: 'Security level configuration')
