[metadata]
name = libpolycall
version = 0.1.0
author = OBINexus Team
author_email = engineering@obinexus.com
description = OBINexus LibPolyCall - Hybrid C/Python polyglot call framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/obinexus/libpolycall
project_urls =
    Bug Tracker = https://github.com/obinexus/libpolycall/issues
    Documentation = https://libpolycall.obinexus.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click>=8.0
    pydantic>=2.0
    rich>=12.0
    httpx>=0.24.0
    structlog>=23.0

[options.packages.find]
where = .
include = polycall*, sinphase_governance*
exclude =
    tests*
    docs*
    root-dynamic-c*

[options.entry_points]
console_scripts =
    polycall = polycall.cli:main
    sinphase-check = sinphase_governance.cli:check

[options.extras_require]
dev =
    pytest>=7.0
    pytest-asyncio>=0.21
    pytest-cov>=4.0
    pytest-benchmark>=4.0
    pytest-mock>=3.0
    black>=23.0
    mypy>=1.0
    ruff>=0.1.0

[options.package_data]
* = *.json, *.yaml, *.yml, *.txt