[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sinphase-toolkit"
version = "0.1.0"
description = "Sinphasé Governance Toolkit for OBINexus libpolycall"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "OBINexus Computing"}
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sinphase = "sinphase_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sinphase_toolkit*"]
