# CLI module unit QA tests
add_subdirectory(accessibility)
add_subdirectory(auth)
add_subdirectory(config)
add_subdirectory(edge)
add_subdirectory(ffi)
add_subdirectory(micro)
add_subdirectory(network)
add_subdirectory(polycall)
add_subdirectory(protocol)
add_subdirectory(repl)
add_subdirectory(socket)
add_subdirectory(telemetry)
